# ticker-symbols-task

./: classify_old_ticker_changes.py  extract_pure_changes_from_occ_export.py  filter_non_pure_ticker_changes.py  filter_pure_changes.py  filtered_ticker_changes.csv  final_classified_results.csv  final_pure_ticker_changes.csv  memo_export.csv  occ_classified_results.csv  occ_scraped_final.csv  occ_scraped_results_full.csv  occ_scraped_results_sample.csv  occ_scraper_chunked.py  occ_scraper_sample.py  output_003.csv  progress_report.py  pure_ticker_changes_step2.csv  pyproject.toml  reclassify_results.py  requirements.txt  run_all_chunks.py  split_into_chunks.py  step2_final_pure_only.csv  step2_pure_validated_v2.csv  test_real_changes.py  test_scraper.py  ticker_data_fixed.csv
.claude/: settings.local.json
chunks/: chunk_001.csv  chunk_002.csv  chunk_003.csv  chunk_004.csv  chunk_005.csv  chunk_006.csv  chunk_007.csv  chunk_008.csv  chunk_009.csv  chunk_010.csv  chunk_011.csv  chunk_012.csv  chunk_013.csv  chunk_014.csv  chunk_015.csv  chunk_016.csv  chunk_017.csv  chunk_018.csv  chunk_019.csv  chunk_020.csv  chunk_021.csv
output/: output_001.csv  output_002.csv  output_003.csv  output_004.csv  output_005.csv  output_006.csv  output_007.csv  output_008.csv  output_009.csv  output_010.csv  output_011.csv  output_012.csv  output_013.csv  output_014.csv  output_015.csv  output_016.csv  output_017.csv  output_018.csv  output_019.csv  output_020.csv  output_021.csv
